--- a/HowClue.css
+++ b/HowClue.css
@@ -1,4 +1,4 @@
-.list1::before { background-color: white; position: absolute; content: &quot; &quot;; height: 100%; z-index: 0; display: block; margin-left: -50vw; width: 99vw; left: 50%; top: 0; border-top: 1px solid none}
+.list1::before { background-color: white; position: absolute; content: " "; height: 100%; z-index: 0; display: block; margin-left: -50vw; width: 99vw; left: 50%; top: 0; border-top: 1px solid none}
   .v5-date-bar {display: none}
 
 /* Reading Progress */
@@ -10,7 +10,7 @@ svg .animated-circle {fill: transparent; stroke-width: 15px; stroke: #0A74DA; st
 
 
 /*Default*/
-body, h1, h2, h3, h4, h5, h6 { font-weight: normal!important; margin: 0; font-family: &quot;Segoe UI&quot;,Arial,sans-serif; }
+body, h1, h2, h3, h4, h5, h6 { font-weight: normal!important; margin: 0; font-family: "Segoe UI",Arial,sans-serif; }
 body { animation: fadeInAnimation ease 0.8s; animation-iteration-count: 1; animation-fill-mode: forwards;}
 @keyframes fadeInAnimation { 0% {  opacity: 0; } 100% {  opacity: 1; } } 
 html, body {background-color: #f1f8ff; counter-reset: v5-counter; color:#383838}
@@ -39,7 +39,7 @@ ol#top-ra, a.comment-reply, .loadmore.hidden { display: none;} /*hide comment*/
 .right {display: flex; padding: 3px 10px;}
 .right a {padding: 10px 20px; font-size: 11px; margin-left: 10px; display: inline-block; -webkit-border-radius: 5px; -webkit-transition: all .2s; color: #448aff; font-weight: bold; text-decoration: none; text-transform: uppercase;}
 .topnav { overflow: hidden;  position: relative; width: 100%;}
-.nav-home::before { content: url(&quot;data:image/svg+xml;utf8,<svg height='14' viewbox='0 0 50 50' width='15' xmlns='http://www.w3.org/2000/svg'><path d='M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z' style='fill:gray'/>Home</svg>&quot;); padding-right: 5px;}
+.nav-home::before { content: url("data:image/svg+xml;utf8,<svg height='14' viewbox='0 0 50 50' width='15' xmlns='http://www.w3.org/2000/svg'><path d='M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z' style='fill:gray'/>Home</svg>"); padding-right: 5px;}
 
 /*Search Box*/
 .search-container { width: 100%;}
@@ -47,9 +47,9 @@ ol#top-ra, a.comment-reply, .loadmore.hidden { display: none;} /*hide comment*/
 #home-bo-search-box{position:relative; border-radius: 5px; background-color: #ffffff1c;}
 .home-bo-sb-buttonwrap {position: absolute;right: 0;width: 40px;display: block;top: 0;cursor: pointer;height: 35px; margin-top: 3px;}
 .home-bo-sb-submit {border: none;margin-right: -17.5px;background: transparent;width: 100%;cursor: pointer;height: 35px;}
-.home-bo-sb-submit:after {left: 10px;width: 8px;border-radius: 50%;height: 8px;content: &quot;&quot;;;position: absolute;
+.home-bo-sb-submit:after {left: 10px;width: 8px;border-radius: 50%;height: 8px;content: "";;position: absolute;
 border: 2px solid #448aff;box-sizing: content-box;top: 9px;} 
-.home-bo-sb-submit:before {content: &quot;&quot;;;background: #448aff;transform: rotate(-35deg);position: absolute;height: 8px;left: 21px;width: 2px;top: 19px;}
+.home-bo-sb-submit:before {content: "";;background: #448aff;transform: rotate(-35deg);position: absolute;height: 8px;left: 21px;width: 2px;top: 19px;}
 .home-bo-sb-input {height: 40px;transition: all 0.5s;border-radius: 2px; font-size: 15px; background-color: transparent; width: -webkit-fill-available; padding: 0px 0px 0px 10px; border: 1px solid #dfe1e5;}
 .home-bo-sb-input:focus {-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);outline: 0;border-color: #66afe9;box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);}
 .topnav input[type=text] { }
@@ -59,10 +59,10 @@ border: 2px solid #448aff;box-sizing: content-box;top: 9px;}
 .v5-tab li {list-style: none; margin: 0; display: inline; padding: 7px 15px 10px; background-color: inherit; text-decoration: none; cursor: pointer; transition: 0.3s; border-radius: 3px 3px 0 0; border-width: 3px 1px 1px; font-size: 13px; color: #586069}
 .v5-tab li a:hover { color: #000; background: #AAE; border-color: #227; }
 .v5-tab li.active { background: #f1f8ff; border-left:1px solid #c8e1ff; border-right: 1px solid #c8e1ff; border-top: 3px solid gold; border-bottom: 1px solid #f1f8ff; color: #444; font-weight: bold;}
-.v5-tab::before { background-color: white; position: absolute; content: &quot; &quot;; height: 100%; z-index: -5; display: block; margin-left: -50vw; width: 99vw; left: 50%; margin-top: -20px; border-bottom: 1px solid #c8e1ff}
-.v5-tab-1::before { content: url(&quot;data:image/svg+xml;utf8,<svg height='14' viewbox='0 0 50 50' width='20' xmlns='http://www.w3.org/2000/svg'><path d='M3 5h4v1H3V5zm0 3h4V7H3v1zm0 2h4V9H3v1zm11-5h-4v1h4V5zm0 2h-4v1h4V7zm0 2h-4v1h4V9zm2-6v9c0 .55-.45 1-1 1H9.5l-1 1-1-1H2c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h5.5l1 1 1-1H15c.55 0 1 .45 1 1zm-8 .5L7.5 3H2v9h6V3.5zm7-.5H9.5l-.5.5V12h6V3z' style='fill:gray'/>Home</svg>&quot;); vertical-align: middle;}
-.v5-tab-2::before {content: url(&quot;data:image/svg+xml;utf8,<svg height='14' viewbox='0 0 16 16' width='20' xmlns='http://www.w3.org/2000/svg'><path d='M14 1H2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2v3.5L7.5 11H14c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1zm0 9H7l-2 2v-2H2V2h12v8z' style='fill:gray'/>Home</svg>&quot;); vertical-align: middle;}
-.v5-tab-3::before {content: url(&quot;data:image/svg+xml;utf8,<svg height='14' viewbox='0 0 16 16' width='20' xmlns='http://www.w3.org/2000/svg'><path d='M8 1a1.993 1.993 0 0 0-1 3.72V6L5 8 3 6V4.72A1.993 1.993 0 0 0 2 1a1.993 1.993 0 0 0-1 3.72V6.5l3 3v1.78A1.993 1.993 0 0 0 5 15a1.993 1.993 0 0 0 1-3.72V9.5l3-3V4.72A1.993 1.993 0 0 0 8 1zM2 4.2C1.34 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3 10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3-10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z' style='fill:gray'/>Home</svg>&quot;); vertical-align: middle;}
+.v5-tab::before { background-color: white; position: absolute; content: " "; height: 100%; z-index: -5; display: block; margin-left: -50vw; width: 99vw; left: 50%; margin-top: -20px; border-bottom: 1px solid #c8e1ff}
+.v5-tab-1::before { content: url("data:image/svg+xml;utf8,<svg height='14' viewbox='0 0 50 50' width='20' xmlns='http://www.w3.org/2000/svg'><path d='M3 5h4v1H3V5zm0 3h4V7H3v1zm0 2h4V9H3v1zm11-5h-4v1h4V5zm0 2h-4v1h4V7zm0 2h-4v1h4V9zm2-6v9c0 .55-.45 1-1 1H9.5l-1 1-1-1H2c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h5.5l1 1 1-1H15c.55 0 1 .45 1 1zm-8 .5L7.5 3H2v9h6V3.5zm7-.5H9.5l-.5.5V12h6V3z' style='fill:gray'/>Home</svg>"); vertical-align: middle;}
+.v5-tab-2::before {content: url("data:image/svg+xml;utf8,<svg height='14' viewbox='0 0 16 16' width='20' xmlns='http://www.w3.org/2000/svg'><path d='M14 1H2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2v3.5L7.5 11H14c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1zm0 9H7l-2 2v-2H2V2h12v8z' style='fill:gray'/>Home</svg>"); vertical-align: middle;}
+.v5-tab-3::before {content: url("data:image/svg+xml;utf8,<svg height='14' viewbox='0 0 16 16' width='20' xmlns='http://www.w3.org/2000/svg'><path d='M8 1a1.993 1.993 0 0 0-1 3.72V6L5 8 3 6V4.72A1.993 1.993 0 0 0 2 1a1.993 1.993 0 0 0-1 3.72V6.5l3 3v1.78A1.993 1.993 0 0 0 5 15a1.993 1.993 0 0 0 1-3.72V9.5l3-3V4.72A1.993 1.993 0 0 0 8 1zM2 4.2C1.34 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3 10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3-10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z' style='fill:gray'/>Home</svg>"); vertical-align: middle;}
 .v5-tab-comment-count { color: #444d56; display: inline-block; background-color: rgba(27,31,35,0.08); border-radius: 20px; padding: 2px 5px; line-height: 1;}
 
 /*Paging*/
@@ -78,7 +78,7 @@ pager{ text-align: center; background-color: #71c242; display: inline-block; cur
 
 /*Top Nav*/
 .v5-top-nav { font-size: 17px; text-transform: lowercase; padding: 15px 10px; z-index: 1; position: relative; letter-spacing: -0.4px;}
-.v5-top-nav::before { background-color: white; position: absolute; content: &quot; &quot;; height: 100%; z-index: -5; display: block; margin-left: -50vw; width: 99vw; left: 50%; top: 0; border-top: 1px solid white}
+.v5-top-nav::before { background-color: white; position: absolute; content: " "; height: 100%; z-index: -5; display: block; margin-left: -50vw; width: 99vw; left: 50%; top: 0; border-top: 1px solid white}
 
 /*Comments*/
 .comment-timestamp { float: right; text-transform: capitalize; font-weight: normal;}
@@ -92,7 +92,7 @@ p.comment-footer a { display: none}
 a.v5-comment-up{ text-align: center; background-color: #0361cc; background-image: linear-gradient(-180deg, #0679fc 0%, #0361cc 90%); display: table; cursor: pointer; padding: 6px 12px; color: white; margin: 20px auto; border-radius: 2px; 
 box-shadow: 0 1px 1px 0 rgba(0,0,0,0.1); text-decoration: none; font-size: 12px; font-weight: bold;}
 
-.comments .avatar-image-container { float: left; max-height: 25px; overflow: hidden; width: 25px !important; background-color: #fdb646; padding: 7px; border-radius: 100px; content: url(&quot;data:image/svg+xml;utf8,<svg height='500' viewbox='0 0 50 50' width='500' xmlns='http://www.w3.org/2000/svg'><path d='M346.491,316.547c49.193-29.944,81.275-83.414,81.275-145.44C427.767,76.998,350.768,0,256.66,0 S85.553,76.998,85.553,171.107c0,62.026,32.082,115.497,81.275,145.44C81.275,348.63,17.11,423.489,0,513.32h42.777c21.388-98.386,109.081-171.107,213.883-171.107s192.495,72.72,213.883,171.107h42.777 C496.21,421.35,432.045,346.491,346.491,316.547z M128.33,171.107c0-70.581,57.749-128.33,128.33-128.33 s128.33,57.749,128.33,128.33s-57.749,128.33-128.33,128.33S128.33,241.688,128.33,171.107z' style='fill:white'/>Home</svg>&quot;) }
+.comments .avatar-image-container { float: left; max-height: 25px; overflow: hidden; width: 25px !important; background-color: #fdb646; padding: 7px; border-radius: 100px; content: url("data:image/svg+xml;utf8,<svg height='500' viewbox='0 0 50 50' width='500' xmlns='http://www.w3.org/2000/svg'><path d='M346.491,316.547c49.193-29.944,81.275-83.414,81.275-145.44C427.767,76.998,350.768,0,256.66,0 S85.553,76.998,85.553,171.107c0,62.026,32.082,115.497,81.275,145.44C81.275,348.63,17.11,423.489,0,513.32h42.777c21.388-98.386,109.081-171.107,213.883-171.107s192.495,72.72,213.883,171.107h42.777 C496.21,421.35,432.045,346.491,346.491,316.547z M128.33,171.107c0-70.581,57.749-128.33,128.33-128.33 s128.33,57.749,128.33,128.33s-57.749,128.33-128.33,128.33S128.33,241.688,128.33,171.107z' style='fill:white'/>Home</svg>") }
 #comments-block.avatar-comment-indent { margin-left: 45px;position: relative;}
 #comments-block.avatar-comment-indent dd {margin-left: 0;}
 #comments-block .avatar-image-container { height: 37px; left: -45px; position: absolute; width: 37px;}
@@ -114,20 +114,20 @@ text-align: center; width: 25px; height: 25px;  margin: -5px 10px;  font-size: 8
 .post-title-text {color: #555; font-weight: 450; font-size: 35px; padding: 15px 20px 0px 30px; text-transform: capitalize; text-align: center; line-height: 1.5;}
 a { color: #2196F3}
 #blog-pager, .comment-timestamp {display: none !important}
-.ex-code, .htmlHigh, .cssHigh, .jsHigh {font-family:Consolas,&quot;courier new&quot;;padding:8px 12px;background-color: #f6f8fa;border-radius: 8px;word-wrap:break-word;word-break:break-all;font-size:14px;line-height:1.5;cursor: text; margin: 5px 0px 0px 0px; -moz-user-select: all; user-select: all; max-width: 450px; opacity: 0.7;} 
+.ex-code, .htmlHigh, .cssHigh, .jsHigh {font-family:Consolas,"courier new";padding:8px 12px;background-color: #f6f8fa;border-radius: 8px;word-wrap:break-word;word-break:break-all;font-size:14px;line-height:1.5;cursor: text; margin: 5px 0px 0px 0px; -moz-user-select: all; user-select: all; max-width: 450px; opacity: 0.7;} 
 a.post-button { padding: 11px 30px; font-size: 12px; font-weight: bold; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); border-radius: 5px; margin-top: 20px; display: inline-block; color: #448aff; text-transform: uppercase;}
 
 .youtube-player{position:relative;height:300px;overflow:hidden;max-width:600px;background:#000;margin:20px auto}
 .youtube-player iframe{position:absolute;top:0;left:0;width:100%;height:100%;z-index:100;background:transparent}
 .youtube-player img{bottom:0;display:block;left:0;margin:auto;max-width:100%;width:100%;position:absolute;right:0;top:0;border:none;height:auto;cursor:pointer;-webkit-transition:.4s all;-moz-transition:.4s all;transition:.4s all}.youtube-player img:hover{-webkit-filter:brightness(75%)}
-.youtube-player .play{height:150px;width:150px;left:50%;top:50%;margin-left:-70px;margin-top:-75px;position:absolute;cursor:pointer; content: url(&quot;data:image/svg+xml;utf8,<svg height='200' viewbox='0 0 200 200' width='200' xmlns='http://www.w3.org/2000/svg'><polygon fill='white' points='70, 55 70, 145 145, 100'/>Home</svg>&quot;)}
+.youtube-player .play{height:150px;width:150px;left:50%;top:50%;margin-left:-70px;margin-top:-75px;position:absolute;cursor:pointer; content: url("data:image/svg+xml;utf8,<svg height='200' viewbox='0 0 200 200' width='200' xmlns='http://www.w3.org/2000/svg'><polygon fill='white' points='70, 55 70, 145 145, 100'/>Home</svg>")}
 .ytp-button {display: none;}
 
 .ytp-pause-overlay-controls-hidden .ytp-pause-overlay {display: none;}
 .ytp-chrome-top-buttons {display: none;}
 
 .w3-right {float: right}
-.v5-date-bar::before { content: url(&quot;data:image/svg+xml;utf8,<svg height='13' viewbox='0 0 50 50' width='22' xmlns='http://www.w3.org/2000/svg'><path d='M3 5h4v1H3V5zm0 3h4V7H3v1zm0 2h4V9H3v1zm11-5h-4v1h4V5zm0 2h-4v1h4V7zm0 2h-4v1h4V9zm2-6v9c0 .55-.45 1-1 1H9.5l-1 1-1-1H2c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h5.5l1 1 1-1H15c.55 0 1 .45 1 1zm-8 .5L7.5 3H2v9h6V3.5zm7-.5H9.5l-.5.5V12h6V3z' style='fill:skyblue'/>Home</svg>&quot;)}
+.v5-date-bar::before { content: url("data:image/svg+xml;utf8,<svg height='13' viewbox='0 0 50 50' width='22' xmlns='http://www.w3.org/2000/svg'><path d='M3 5h4v1H3V5zm0 3h4V7H3v1zm0 2h4V9H3v1zm11-5h-4v1h4V5zm0 2h-4v1h4V7zm0 2h-4v1h4V9zm2-6v9c0 .55-.45 1-1 1H9.5l-1 1-1-1H2c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h5.5l1 1 1-1H15c.55 0 1 .45 1 1zm-8 .5L7.5 3H2v9h6V3.5zm7-.5H9.5l-.5.5V12h6V3z' style='fill:skyblue'/>Home</svg>")}
 .v5-post-body {border-top: none;}
 .v5-date-bar { background-color: #f1f8ff; border: 1px solid #c8e1ff; padding: 10px; font-size: 13px; margin-top: 30px; color: #586069; 
 border-radius: 10px 10px 0px 0px;}
@@ -149,7 +149,7 @@ h3::before { content: counter(step-counter); background-color: #448aff; color: w
 
 .list1 {position: relative;}
 .list1 li::after { position: absolute; z-index: -1; top: 0; bottom: 0; left: 19px; border-left: 2px solid #448aff;
-content: &quot;&quot;}
+content: ""}
 .list1 li:first-child:after {top: 50px;}
 .list1 li:last-child:after {bottom: 50px;}
 .list li img {display: block;margin: auto; border: 10px solid white; float: right; }
